fix OOXML validation error, related fdo#42584

Use correct namespace for detectmouseclick

Change-Id: I2830ef089ade94e69a49cb8ceba7fe91fa86817f